# kuka-gazebo

./: README.md  TODO.txt
iiwa/: package.xml
iiwa_control/Control/: diff_kine_control_1.py  dynamixel_interface.py  single_arm_diff_kinematics.m
iiwa_control/config/: PID_Tune.perspective  force_control.yaml  iiwa_control.yaml  iiwa_sim.yaml  pulsating_surface_control.yaml
iiwa_control/control/: init_robot.py
iiwa_control/launch/: iiwa_control.launch
iiwa_description/dual_arm_wo_wrist/: CMakeLists.txt  package.xml
iiwa_description/dual_arm_wo_wrist/config/: joint_names_dual_arm_wo_wrist.yaml
iiwa_description/dual_arm_wo_wrist/launch/: display.launch  gazebo.launch
iiwa_description/dual_arm_wo_wrist/meshes/: L1_2.STL  L1_3.STL  L1_4.STL  L2_1.STL  L2_2.STL  L2_3.STL  L2_4.STL  base_link.STL
iiwa_description/dual_arm_wo_wrist/urdf/: dual_arm_wo_wrist.urdf
iiwa_description/launch/: iiwa14.launch  iiwa14_upload.launch  kuka_force_control_demo.launch
iiwa_description/urdf/: Dual_Arm.urdf  Dual_Arm.xacro  complete_chain.urdf.xacro  complete_chain.xacro  dual_arm_left.xacro  dual_arm_right.xacro  gripper_eoat.xacro  iiwa.gazebo.xacro  iiwa.transmission (copy).xacro  iiwa.transmission.xacro  iiwa14.urdf.xacro  iiwa14.xacro  juans_eoat.xacro  kuka_base_frame.xacro  pulsating_surface.gazebo.xacro  pulsating_surface.transmission.xacro  pulsating_surface.urdf.xacro  pulsating_surface.xacro  table.urdf.xacro
iiwa_description/urdf/dual_arm_system/: Dual_Arm.xacro  complete_chain.urdf.xacro  complete_chain.xacro  dual_arm_left.xacro  dual_arm_right.xacro  gripper_L.xacro  gripper_R.xacro  iiwa.gazebo.xacro  iiwa.transmission.xacro  miniwrist_left.xacro  miniwrist_right.xacro  surgical_env.xacro
iiwa_description/urdf/force_control_platform/: force_control.transmission.xacro  (+8 more)
iiwa_gazebo/: ReadMe.md
iiwa_gazebo/launch/: iiwa_gazebo.launch  iiwa_world.launch  kuka_force_control.launch  kuka_sim.launch
iiwa_gazebo/worlds/: iiwa14_and_gripper.world  iiwa_14_with_dual_manipulator.world  iiwa_14_with_dual_manipulator2.world  iiwa_14_with_dual_manipulator_1.world  iiwa_gripper_and_pulsating_surface.world  iiwa_juan.world  iiwa_juan_circle.world  iiwa_juan_circle_force_feedback.world  iiwa_juan_circle_spawn_robot.world  table.world  test.sdf
iiwa_hw/include/: iiwa_hw.h
iiwa_hw/src/: iiwa_hw.cpp  main.cpp
iiwa_msgs/: CMakeLists.txt
iiwa_resources/: desired_position_circle.txt
iiwa_ros/: CMakeLists.txt
iiwa_ros/include/: iiwa_ros.h
iiwa_ros/launch/: command_iiwa.launch
iiwa_ros/scripts/: Notes.txt  closeGripper.py  controlGripper.py  gripBox.py  ik_sol ve_tutorial.py  ik_solver_tutorial.py  publishCircleTrajectory.py
iiwa_ros/src/: iiwa_ros.cpp
iiwa_stack_examples/: README.md
iiwa_stack_examples/iiwa_tool/: README.md
iiwa_stack_examples/iiwa_tool_examples/: CMakeLists.txt
iiwa_stack_examples/iiwa_tool_examples/src/: command_robot.cpp  command_robot_moveit.cpp
iiwa_stack_examples/iiwa_tool_examples/src/data/: a.out  desired_position.txt
iiwa_tool_examples/: CMakeLists.txt  package.xml  setup.py
iiwa_tool_examples/src/: command_robot.cpp  command_robot.py  pybindings.cpp  save_data.cpp  setting_control_mode.cpp
scripts_sim/: CMakeLists.txt  package.xml
scripts_sim/launch/: iiwa_velocity_gazebo.launch
scripts_sim/src/: command_robot.cpp  command_robot.py  gz_topic_listner.cpp  move_arm_traj.py  move_table.py
scripts_sim/src/data/: eigenTest.cpp
scripts_sim/src/qpMPC/: createMatrices.py  qpMPC.py
(+95 files in other folders)
